# formsolver

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  requirements.txt  run_test.sh
ccx/: CMakeLists.txt  form_gauss.f  shape20h.f  test_gauss.f
cmake/: FindBLAS.cmake  config.cmake
docs/: KLe.md  formulation.md
docs/fem/: KLe.md  bl0.py  bl1.py  bnl.py  elastic.py  s0.py
include/common/: common.h  common_cuda.h  gauss_legendre.h  matrix.h
include/fem/: elem_stiff.h  fe_brick.h  fe_element.h  fe_matrix.h  trans_mat.h
include/fem/element/: brick.h  element.h
include/fem/formulator/: formulator.h  total_lagrangian.h  total_lagrangian_group.h
include/fem/iprop/: brick_iprop.h  element_iprop.h
include/fem/mat/: elastic.h  material.h
python/: grid.py  quad_hex.py  utils.py
src/cpu/: matrix.cc
src/cpu/fem/: total_lagrangian.cc
src/fem/: bl0.cc  elem_stiff.cc  fe_brick.cc  fe_element.cc  fe_matrix.cc  trans_mat.cc
src/fem/element/: element.cc
src/fem/formulator/: total_lagrangian.cc
tests/: CMakeLists.txt  common.h
tests/common/: common.h  test_gauss_legendre.cc  test_matrix.cc
tests/fem/: test_brick.cc  test_brick_iprop.cc  test_ela.cc  test_elem_stiff.cc  test_fe_brick.cc  test_fe_element.cc  test_fe_matrix.cc
tests/fem/brick/: common_brick.h  test_brick.cc  test_brick_ke.cc
